# Corebrain

./: .gitignore  README.md  package-lock.json  pyproject.toml  setup.ps1  setup.sh
corebrain/: __init__.py  corebrain.cpp  corebrain.h  corebrain.pyx  sdk.py
corebrain/bindings/csharp/: SWIGTYPE_p_PyMODINIT_FUNC.cs  corebrain.cs  corebrainPINVOKE.cs
corebrain/bindings/swig/: corebrain.i  csharp_wrap.cxx  generate_swig.py
corebrain/cli/: __init__.py  commands.py  common.py  config.py  utils.py
corebrain/cli/auth/: __init__.py  api_keys.py  sso.py
corebrain/config/: __init__.py  manager.py
corebrain/core/: __init__.py  client.py  query.py  test_utils.py
corebrain/corebrain/: __init__.py  sdk.py
corebrain/corebrain/config/: manager.py
corebrain/corebrain/core/: query.py
corebrain/corebrain/db/: __init__.py  factory.py  interface.py  schema_file.py
corebrain/corebrain/db/connectors/: __init__.py  mongodb.py  nosql.py  sql.py
corebrain/corebrain/db/schema/: extractor.py
corebrain/corebrain/lib/sso/: auth.py  client.py
corebrain/corebrain/network/: __init__.py  client.py
corebrain/corebrain/services/: schema.py
corebrain/corebrain/utils/: __init__.py  encrypter.py  logging.py  serializer.py
corebrain/corebrain/wrappers/csharp/: .gitignore  CorebrainCS.sln  README.md
corebrain/corebrain/wrappers/csharp/CorebrainCS/: CorebrainCS.cs
corebrain/corebrain/wrappers/csharp/CorebrainCS.Tests/: CorebrainCS.Tests.csproj  README.md
corebrain/corebrain/wrappers/csharp_cli_api/: .gitignore  CorebrainCLIAPI.sln  README.md
corebrain/corebrain/wrappers/csharp_cli_api/src/: .editorconfig
corebrain/db/: __init__.py  factory.py  interface.py  schema_file.py
corebrain/db/connectors/: __init__.py  mongodb.py  nosql.py  sql.py
corebrain/db/connectors/subconnectors/: mongodb.py
corebrain/db/connectors/subconnectors/nosql/: mongodb.py
corebrain/db/schema/: __init__.py  extractor.py  optimizer.py
corebrain/examples/: complex.py
corebrain/lib/sso/: auth.py  client.py
corebrain/network/: __init__.py  client.py
corebrain/services/: schema.py
corebrain/utils/: __init__.py  encrypter.py  logging.py  serializer.py
corebrain/wrappers/csharp/CorebrainCS/: CorebrainCS.cs
corebrain/wrappers/csharp/CorebrainCS.Tests/: InteractiveTests.cs
corebrain/wrappers/csharp/CorebrainCS/Services/: InteractiveSession.cs
corebrain/wrappers/csharp_cli_api/src/CorebrainCLIAPI/: CommandController.cs  CorebrainSettings.cs  Program.cs  appsettings.json
corebrain/wrappers/csharp_cli_api/src/CorebrainCLIAPI/Controllers/: InteractiveController.cs
docs/source/_static/: custom.css
examples/: complex.py
(+1 files in other folders)
