[build-system]
requires = [
    "setuptools>=65.0.0",
    "wheel",
    "Cython>=3.0.0",
    "swig>=4.1.0",
    "jinja2>=3.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "corebrain"
version = "1.0.0"
description = "SDK for natural language queries to databases with multi-language bindings"
readme = "README.md"
authors = [
    {name = "Rubén Ayuso", email = "ruben@globodain.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Cython",
]

dependencies = [
    "httpx>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "cryptography>=40.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.4.0",
    "requests>=2.28.0",
    "asyncio>=3.4.3",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.31",
    "pymongo>=4.4.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]
mongodb = ["pymongo>=4.4.0"]
mysql = ["mysql-connector-python>=8.0.31"]
all_db = [
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.4.0",
    "mysql-connector-python>=8.0.31",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "Cython>=3.0.0",
    "swig>=4.1.0",
]
swig = ["swig>=4.1.0"]
cython = ["Cython>=3.0.0"]

[project.scripts]
corebrain = "corebrain.cli.__main__:main"
generate-bindings = "corebrain.bindings.swig.generate_swig:main"

[project.urls]
Homepage = "https://github.com/ceoweggo/Corebrain"
Bug_Tracker = "https://github.com/ceoweggo/Corebrain/issues"

[tool.setuptools]
packages = ["corebrain"]

[tool.setuptools.cmdclass]
build_ext = "Cython.Build.build_ext"


[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.taskipy.tasks]
generate = "python -m corebrain.bindings.swig.generate_swig"

clean = {cmd = "rm -rf build/ dist/ bindings/*/__pycache__", help = "Clean build artifacts"}